--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.1.7",
     "axios": "^1.9.0",
-    "bootstrap": "^5.3.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.14.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.10",
