Backend y frontend version1

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,3 +10,7 @@ DB_PORT=5432
 
 VITE_SUPABASE_URL=https://your-project-ref.supabase.co
 VITE_SUPABASE_ANON_KEY=your-anon-key-here
+
+VITE_AUTH0_DOMAIN=dev-whrxbulkwlxu1gbp.us.auth0.com
+VITE_AUTH0_CLIENT_ID=5IYmUDEsnSjR1XfHwYAlFhJpAogg7ixJ
+
