--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.1",
     "recharts": "^2.15.3",
+    "socket.io-client": "^4.7.2",
     "styled-component": "^2.8.0",
     "tailwind-merge": "^3.3.0",
     "tailwind-variants": "^1.0.0",
